*SVN*

* Ensure that modifying has_and_belongs_to_many actions clear the query cache.  Closes #10840 [john.andrews]

* Fix issue where Table#references doesn't pass a :null option to a *_type attribute for polymorphic associations.  Closes #10753 [railsjitsu]

* update_all ignores scoped :order and :limit, so post.comments.update_all doesn't try to include the comment order in the update statement.  #10686 [Brendan Ribera]

* Added by parameter to increment, decrement, and their bang varieties so you can do player1.increment!(:points, 5) #10542 [Sam]

* Optimize ActiveRecord::Base#exists? to use #select_all instead of #find.  Closes #10605 [jamesh, fcheung, protocool]

* Don't unnecessarily load has_many associations in after_update callbacks.  Closes #6822 [stopdropandrew, canadaduane]

* Eager belongs_to :include infers the foreign key from the association name rather than the class name.  #10517 [Jonathan Viney]

* SQLite: fix rename_ and remove_column for columns with unique indexes.  #10576 [Brandon Keepers]

* Ruby 1.9 compatibility.  [Jeremy Kemper]


*2.0.2* (December 16th, 2007)

* Ensure optimistic locking handles nil #lock_version values properly.  Closes #10510 [rick]

* Make the Fixtures Test::Unit enhancements more supporting for double-loaded test cases.  Closes #10379 [brynary]

* Fix that validates_acceptance_of still works for non-existent tables (useful for bootstrapping new databases).  Closes #10474 [hasmanyjosh]

* Ensure that the :uniq option for has_many :through associations retains the order.  #10463 [remvee]

* Base.exists? doesn't rescue exceptions to avoid hiding SQL errors.  #10458 [Michael Klishin]

* Documentation: Active Record exceptions, destroy_all and delete_all.  #10444, #10447 [Michael Klishin]


*2.0.1* (December 7th, 2007)

* Removed query cache rescue as it could cause code to be run twice (closes #10408) [DHH]


*2.0.0* (December 6th, 2007)
